--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
   "dependencies": {
     "@argent/tma-wallet": "^1.17.0",
     "@radix-ui/react-icons": "^1.3.0",
-    "@tma.js/sdk": "^1.5.3",
-    "@tma.js/sdk-react": "^2.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.453.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
