--- a/bot/package.json
+++ b/bot/package.json
@@ -5,7 +5,7 @@
   "main": "dist/main.js",
   "scripts": {
     "ts-prepare": "ts-patch install -s",
-    "start:dev": "pnpm run ts-prepare && ts-node ./src/main.ts",
+    "start:dev": "npm run ts-prepare && ts-node ./src/main.ts",
     "start:prod": "node ./dist/main.js",
     "build": "tsc && tsc-alias"
   },
